reupload of site

--- a/yogamma.html
+++ b/yogamma.html
@@ -97,8 +97,8 @@
         
         /* Logo container */
         .logo-container {
-            height: 50px;
-            width: 100px;
+            height: 100px;
+            width: 200px;
             display: flex;
             align-items: center;
         }
@@ -125,7 +125,7 @@
             <div class="flex justify-between items-center">
                 <!-- Logo area -->
                 <div class="logo-container">
-                    <img src="images/yogamma-logo-trimmed-rbg.png" alt="Yogamma Logo" class="logo-img h-10">
+                    <img src="images/yogamma-logo-orange-cropped-rbg.png" alt="Yogamma Logo" class="logo-img h-20">
                 </div>
                 
                 <!-- Desktop Navigation -->
@@ -842,4 +842,4 @@
         });
     </script>
 </body>
-</html>\
+</html>
