--- a/yogamma.html
+++ b/yogamma.html
@@ -474,7 +474,7 @@
                         <h3 class="text-xl font-bold text-gray-800">How do I get to Yogamma?</h3>
                     </div>
                     <div class="faq-answer">
-                        <p class="text-gray-600 px-6 pb-6">The exact address will be provided upon booking. Yogamma is located in my peaceful home studio in [your town/city].</p>
+                        <p class="text-gray-600 px-6 pb-6">The exact address will be provided upon booking. Yogamma is located in my peaceful home studio in Fareham.</p>
                     </div>
                 </div>
                 
