--- a/yogamma.html
+++ b/yogamma.html
@@ -465,7 +465,7 @@
                         <h3 class="text-xl font-bold text-gray-800">How do I book a class?</h3>
                     </div>
                     <div class="faq-answer">
-                        <p class="text-gray-600 px-6 pb-6">You can book through the contact form on this website, by calling/texting me at +44 07773 556528, or emailing yogamma@protonmail.com.</p>
+                        <p class="text-gray-600 px-6 pb-6">You can book by calling or texting me at +44 07773 556528, or emailing yogamma@protonmail.com.</p>
                     </div>
                 </div>
                 
