--- a/yogamma.html
+++ b/yogamma.html
@@ -572,6 +572,7 @@
                 </div>
             </div>
         </div>
+        You can also view more testimonials on my <a href="https://www.facebook.com/yogammarise/reviews" target="_blank" class="text-primary-600 hover:text-primary-800 font-medium">Facebook page</a>.
     </section>
 
     <!-- Contact Section -->
