fixed flex issues

--- a/yogamma.html
+++ b/yogamma.html
@@ -501,7 +501,7 @@
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="py-20 bg-white">
-        <div class="flex justify-center mx-auto px-6">
+        <div class="container mx-auto px-6">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">What My Students Say</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">Hear from those who have experienced Yogamma firsthand</p>
@@ -571,7 +571,9 @@
                     </div>
                 </div>
             </div>
-            <p>You can also view more testimonials and reviews on my <a href="https://www.facebook.com/yogammarise/reviews" target="_blank" class="text-primary-600 hover:text-primary-800 font-medium">Facebook page</a> or on <a href="https://www.google.com/maps/place/Yogamma/@50.858825,-1.1852865,17z/data=!4m8!3m7!1s0x48746977a86d9b99:0x280098cc1b113757!8m2!3d50.858825!4d-1.1827116!9m1!1b1!16s%2Fg%2F11jg06md3p?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D" target="_blank" class="text-primary-600 hover:text-primary-800 font-medium">Google reviews</a>.</p>
+            <div class="w-full text-center">
+                <p>You can also view more testimonials and reviews on my <a href="https://www.facebook.com/yogammarise/reviews" target="_blank" class="text-primary-600 hover:text-primary-800 font-medium">Facebook page</a> or on <a href="https://www.google.com/maps/place/Yogamma/@50.858825,-1.1852865,17z/data=!4m8!3m7!1s0x48746977a86d9b99:0x280098cc1b113757!8m2!3d50.858825!4d-1.1827116!9m1!1b1!16s%2Fg%2F11jg06md3p?entry=ttu&g_ep=EgoyMDI2MDIwMy4wIKXMDSoKLDEwMDc5MjA2OUgBUAM%3D" target="_blank" class="text-primary-600 hover:text-primary-800 font-medium">Google reviews</a>.</p>
+            </div>
         </div>
     </section>
 
